# ccost

./: AGENTS.md  Cargo.toml  README.md  fine.sh  renovate.json5
.agents/skills/: ccost-release
.claude/skills/ccost-release/: SKILL.md
.github/workflows/: ci.yml  create-release-tag.yml  release.yml  update-offline-pricing.yml
assets/: claude_pricing.json  codex_pricing.json
scripts/: update_offline_pricing.sh
skills/ccost/: SKILL.md
skills/ccost/agents/: openai.yaml
src/: cli.rs  data_loader.rs  lib.rs  main.rs  pricing.rs  table.rs  time_utils.rs  token_utils.rs
