[package]
name = "ccost"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dirs = "6"
jwalk = "0.8"
num-format = "0.4"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5"
terminal_size = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
tempfile = "=3.26.0"
